--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,12 +1,12 @@
 # main links
 main:
   - title: "Home"
-    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  - title: "About"
-    url: https://mmistakes.github.io/minimal-mistakes/about/
+    url: https://pdoubleday.github.io/
+  - title: "About Peter"
+    url: https://pdoubleday.github.io/about/
   - title: "Publications"
-    url: /year-archive/
+    url: /publications/
   - title: "CV"
-    url: /collection-archive/
+    url: /cv/
   - title: "Teaching"
-    url: /sitemap/
+    url: /teaching/
