--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ description              : "A personal website"
 url                      : "https://pdoubleday.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
-teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
+teaser                   : "/assets/images/500x300.png"
+logo                     : "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
@@ -98,7 +98,7 @@ analytics:
 # Site Author
 author:
   name             : "Peter Doubleday"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Postdoctoral Fellow<br/>ETH Zurich<br/>Institute of Molecular Systems Biology"
   location         : "Zurich"
   email            : "doubleday@imsb.biol.ethz.ch"
