--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,6 +7,6 @@ main:
   - title: "Publications"
     url: /publications/
   - title: "CV"
-    url: /cv.html/
+    url: /cv/
   - title: "Teaching"
     url: /teaching/
